@@ -1,3 +1,8 @@
+2008-05-19  Adam Nemet  <anemet@caviumnetworks.com>
+
+	PR middle-end/36194
+	* gcc.dg/pr36194.c: New test.
+
 2008-05-14  Michael Meissner  <michael.meissner@amd.com>
 
 	Backport from mainline:
